[package]
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
name = "uuid-b64"
version = "0.1.0"
license = "Apache-2.0/MIT"
readme = "README.md"
categories = ["encoding", "value-formatting"]
repository = "https://github.com/quodlibetor/uuid-b64"

[badges]
travis-ci = { repository = "quodlibetor/uuid-b64", branch = "master" }

[dependencies]
base64 = "0.8"
diesel-derive-newtype = { version = "0.1", optional = true }
diesel = { version = "1.0", features = ["postgres", "uuid"], optional = true }
error-chain = "0.11.0"
inlinable_string = { version = "0.1.0", features = ["serde"] }
lazy_static = "0.2.9"
serde = { version = "1.0.15", optional = true }
# Diesel 1.1.1 doesn't support 0.6.1 yet
uuid = { version = ">=0.5.1,<0.6.0", features = ["v4", "use_std"] }

[features]
default-features = ["serde"]
diesel-uuid = ["diesel-derive-newtype", "diesel"]

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0", features = ["postgres", "uuid"] }
