[package]
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
name = "uuid-b64"
description = "Base64 encoding for UUIDs"
version = "0.2.0"
license = "Apache-2.0/MIT"
readme = "README.md"
categories = ["encoding", "value-formatting"]
repository = "https://github.com/quodlibetor/uuid-b64"
edition = "2021"

[badges]
travis-ci = { repository = "quodlibetor/uuid-b64", branch = "master" }

[dependencies]
base64 = ">=0.21.0,<=0.22"
diesel-derive-newtype = { version = "2.1.0", optional = true }
diesel = { version = "2.2.0", features = ["postgres", "uuid"], optional = true }
error-chain = "0.12.0"
inlinable_string = { version = "0.1.0", default-features = false }
serde = { version = "1.0.15", optional = true }
uuid = { version = "1.8.0", features = ["v4"] }

[features]
default = []
serde = ["dep:serde", "inlinable_string/serde"]
diesel-uuid = ["dep:diesel-derive-newtype", "dep:diesel"]
diesel = ["diesel-uuid"]

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "2.2.0", features = ["postgres", "uuid"] }
